// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PodcastListPage /> new podcast list page test 1`] = `
<div>
  <main
    class="podcast-list-page"
  >
    <span>
      idle
    </span>
    <span>
      {}
    </span>
    <span>
      "object"
    </span>
    <span>
      No podcasts found. 1
      {}
    </span>
  </main>
</div>
`;

exports[`<PodcastListPage /> new podcast list page test2 1`] = `
<div>
  <main
    class="podcast-list-page"
  >
    <span>
      idle
    </span>
    <span>
      {"test":"test"}
    </span>
    <span>
      "object"
    </span>
    <span>
      No podcasts found. 1
      {"test":"test"}
    </span>
  </main>
</div>
`;

exports[`<PodcastListPage /> new podcast list page test3 1`] = `
<div>
  <main
    class="podcast-list-page"
  >
    <span>
      idle
    </span>
    <span>
      {"test":"test"}
    </span>
    <span>
      "object"
    </span>
    <span>
      No podcasts found. 1
      {"test":"test"}
    </span>
  </main>
</div>
`;

exports[`<PodcastListPage /> renders fallbackElement within router contexts 1`] = `
"<div>
  <h1>
    Foo:
  </h1>
</div>"
`;
